# vector-field-analysis

./: .clang-format  .clang-tidy  .env.example  .gitignore  .mise.toml  CMakeLists.txt  Makefile  README.md  timings.sh
.github/workflows/: README.md  ci.yml  release.yml
bins/: README.md
bins/analyzer/: CMakeLists.txt  README.md
bins/analyzer/docs/: README.md  adding-a-solver.md  config-guide.md  pipeline.md
bins/analyzer/src/: README.md  analyzerConfig.hpp  analyzerConfigParser.cpp  analyzerConfigParser.hpp  configParser.cpp  configParser.hpp  cuda.cu  cuda.hpp  cudaFull.cu  cudaFull.hpp  cudaFullStreamlineSolver.cu  cudaFullStreamlineSolver.hpp  cudaMpiStreamlineSolver.cpp  cudaMpiStreamlineSolver.hpp  cudaStreamlineSolver.cu  cudaStreamlineSolver.hpp  fieldReader.cpp  fieldReader.hpp  hybridCudaMpiStreamlineSolver.cpp  hybridCudaMpiStreamlineSolver.hpp  main.cpp  mpiCPU.cpp  mpiStreamlineSolver.cpp  mpiStreamlineSolver.hpp  openMP.cpp  openMP.hpp  openMPStreamlineSolver.cpp  openMPStreamlineSolver.hpp  openMpStreamlineSolver.cpp  openMpStreamlineSolver.hpp  pthreads.cpp  pthreads.hpp  pthreadsStreamlineSolver.cpp  pthreadsStreamlineSolver.hpp  runner.cpp  runner.hpp  sequentialCPU.cpp  sequentialCPU.hpp  sequentialStreamlineSolver.cpp  sequentialStreamlineSolver.hpp  (+12 more)
bins/analyzer/tests/: CMakeLists.txt  README.md  test_configParser.cpp  test_fieldReader.cpp  test_implementations.cpp  test_solverFactory.cpp  test_streamWriter.cpp  test_vectorfield.cpp
bins/simulator/: CMakeLists.txt  README.md
bins/simulator/configs/: README.md  accretion_disk.toml  boundary_layer.toml  circular_flow.toml  converging_streams.toml  crossing_streams.toml  custom_rotation.toml  different_speeds.toml  drifting_stream.toml  dual_vortex.toml  four_streams.toml  hurricane.toml  jet_stream.toml  karman_street.toml  kelvin_helmholtz.toml  layered.toml  magnetosphere.toml  magnitude_contrast.toml  magnitude_pressure_gradient.toml  magnitude_structure_over_noise.toml  multi_flow_2.toml  multi_flow_3.toml  multi_flow_4.toml  noise.toml  one_stream.toml  opposing_streams.toml  pinwheel.toml  pulsatile_flow.toml  pulsing_stream.toml  river_delta.toml  simple_kelvin_helmholtz.toml  source_sink.toml  spiral.toml  spiral_galaxy.toml  splitting_stream.toml  static.toml  stream_with_vortex.toml  swapping_streams.toml  three_streams.toml  two_streams.toml  (+2 more)
bins/simulator/docs/: README.md  config-guide.md  pipeline.md
bins/simulator/src/: README.md  configParser.cpp  configParser.hpp  fieldGenerator.cpp  fieldGenerator.hpp  fieldWriter.cpp  fieldWriter.hpp  main.cpp  simulatorConfig.hpp
bins/simulator/tests/: CMakeLists.txt  README.md  test_simulator.cpp
bins/tests/: README.md  tempFile.hpp
cmake/: Dependencies.cmake  README.md
configs/: README.md  accretion_disk_128x128.toml  accretion_disk_256x256.toml  accretion_disk_64x64.toml  boundary_layer_128x128.toml  boundary_layer_256x256.toml  boundary_layer_64x64.toml  circular_flow_128x128.toml  circular_flow_256x256.toml  circular_flow_64x64.toml  converging_streams_128x128.toml  converging_streams_256x256.toml  converging_streams_64x64.toml  crossing_streams_128x128.toml  crossing_streams_256x256.toml  crossing_streams_64x64.toml  custom_rotation_128x128.toml  custom_rotation_32x32.toml  custom_rotation_64x64.toml  different_speeds_128x128.toml  different_speeds_256x256.toml  different_speeds_64x64.toml  drifting_stream_128x128.toml  drifting_stream_256x256.toml  drifting_stream_64x64.toml  dual_vortex_128x64.toml  dual_vortex_256x128.toml  dual_vortex_64x32.toml  four_streams_128x128.toml  four_streams_256x256.toml  four_streams_64x64.toml  hurricane_128x128.toml  hurricane_256x256.toml  hurricane_64x64.toml  jet_stream_128x128.toml  jet_stream_256x256.toml  jet_stream_64x64.toml  karman_street_100000x100000.toml  karman_street_100x100.toml  karman_street_1024x1024.toml  (+138 more)
docs/: README.md  architecture.md  chpc-reference.md  dependencies.md  development.md  fedoraSetup.md  instructions.txt  pipeline.md  project_tasks.md
libs/: README.md
libs/config/: CMakeLists.txt
libs/config/src/: analyzerConfig.hpp
libs/field/: CMakeLists.txt  README.md
libs/field/docs/: README.md
libs/field/src/: fieldTypes.hpp  grid.cpp  grid.hpp  streamline.cpp  streamline.hpp  vec2.cpp  vec2.hpp
libs/field/tests/: CMakeLists.txt  README.md  test_fieldTypes.cpp  test_grid.cpp  test_streamline.cpp  test_vec2.cpp
libs/field_io/: CMakeLists.txt  README.md
libs/field_io/src/: fieldIOCommon.hpp  fieldIoCommon.hpp  fieldReader.cpp  fieldReader.hpp  fieldWriter.cpp  fieldWriter.hpp
libs/field_io/tests/: CMakeLists.txt  test_fieldReader.cpp  test_fieldWriter.cpp
libs/utils/: CMakeLists.txt  README.md
libs/utils/src/: formatBytes.hpp  toml_include.hpp
libs/vector/: CMakeLists.txt  README.md
libs/vector/docs/: README.md
libs/vector/src/: README.md  streamLine.cpp  streamLine.hpp  streamline.cpp  streamline.hpp  vector.cpp  vector.h  vector.hpp
libs/vector/tests/: CMakeLists.txt  README.md  test_streamline.cpp  test_vector.cpp
report/: .gitignore  Makefile  README.md  clean-up.sh  main.tex  references.bib
report/sections/: README.md  abstract.tex  acknowledgments.tex  background.tex  conclusion.tex  introduction.tex  methodology.tex  responsibilities.tex  results.tex
scripts/: CHPC.md  README.md  pipeline.sh  run_configs.sh  validate.sh
scripts/chpc/: README.md  benchmark.sh  check.sh  cpu-shell.sh  enqueue.sh  gpu-shell.sh  job.sh  logs.sh  monitor.sh  pipeline-job.sh  pipeline.sh  stop.sh  submit.sh
scripts/local/: README.md  login.sh  pipeline.sh  pull.sh  push.sh
src/: streamLine.cpp  streamLine.h  vectorField.cpp  vectorField.h
tools/: README.md  field_math.py  gen_size_variants.py  plot_runtimes.py  stats.py  visualize.py
tools/runtime-data/: runtimes.csv
